syntax = "proto3";

package ai.metathings.service.deviced;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message GetObjectStreamingContentRequest {
	OpObject object = 1 [(validator.field) = {msg_exists: true}];
}

message GetObjectStreamingContentResponse {
	bytes content = 1;
}
