package metathings_device_service

import (
	"context"

	pb "github.com/nayotta/metathings/proto/device"
)

func (self *MetathingsDeviceServiceImpl) GetObjectStreamingContent(context.Context, *pb.GetObjectStreamingContentRequest) (*pb.GetObjectStreamingContentResponse, error) {
	panic("unimplemented")
}
